fix yihui/hugo-prose#50: shouldn't move sidenotes when screen width is exactly 1290px, because in this case, side content has been collapsed into the main column

--- a/css/article.css
+++ b/css/article.css
@@ -80,7 +80,7 @@ body, blockquote, .side, .menu { background: #fafafa; }
   padding: 1em 1em 0;
 }
 
-@media (min-width: 1280px) {
+@media (min-width: 1280.02px) {
   .note-ref { cursor: pointer; }
   .note-ref:hover + .side {
     display: inline-block;
